public interface CarMaintenance {
    public int insurance();
    public int fuelConsumption();
    public int maintenanceCost();
    public int cost(int numberOfMonths, int distanceTraveled);
}
