public enum CarType {
    GASOLINE,
    DIESEL,
    ELECTRIC,
}
